--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.wonderkiln:camerakit:0.13.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
+    implementation 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
 }
