--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
     implementation 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
+    implementation 'commons-codec:commons-codec:1.11'
+
 }
