--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'com.wonderkiln:camerakit:0.13.1'
+    implementation 'com.camerakit:camerakit:1.0.0-beta3.10'
+    implementation 'com.camerakit:jpegkit:0.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
     implementation 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
     implementation 'commons-codec:commons-codec:1.11'
+    implementation 'com.sun.net.httpserver:http:20070405'
 
 }
