Local camera streamer

--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -50,6 +50,10 @@ android {
 			jni.srcDirs = []
 		}
 	}
+	packagingOptions{
+		doNotStrip '*/mips/*.so'
+		doNotStrip '*/mips64/*.so'
+	}
     externalNativeBuild {
         ndkBuild {
             path file('src/main/jni/Android.mk')
