--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:noHistory="true">
+            android:label="@string/title_activity_login">
         </activity>
         <activity
             android:name=".QRScannerActivity"
