--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ allprojects {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
-        maven { url 'http://raw.github.com/saki4510t/libcommon/master/repository/' }
+        maven { url "http://raw.github.com/saki4510t/libcommon/master/repository/" }
     }
 }
 
