--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,7 @@ dependencies {
     implementation 'com.github.jiangdongguo:AndroidUSBCamera:2.2.8'
     implementation 'com.jakewharton:butterknife:10.0.0'
     implementation 'com.github.leoforney:MaterialSearchBar:master-SNAPSHOT'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 }
